Primeira versão do componente de pesquisa CID

--- a/frontend/src/app/pacientes/components/solicitacao-de-internacao/solicitacao-de-internacao.component.html
+++ b/frontend/src/app/pacientes/components/solicitacao-de-internacao/solicitacao-de-internacao.component.html
@@ -183,6 +183,14 @@
                         <label>CID Secundário</label>
                     </span>
                 </div>
+                <div class="ui-g-4">
+                    <app-pesquisa-cid
+                        [formControl]="cidTeste"
+                        [required]="true"
+                        [field]="descricao"
+                        label="CID Teste"
+                    ></app-pesquisa-cid>
+                </div>
             </div>
             <div class="ui-g-12">
                 <div class="ui-g-4">
