--- a/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="ui-g ui-fluid">
-    <div [formGroup]="formularioDeCadastro">
+    <form [formGroup]="formularioDeCadastro" (ngSubmit)="cadastrar()">
         <p-accordion>
             <p-accordionTab header="Dados Pessoais" [selected]="true">
                 <app-dados-pessoais
@@ -31,11 +31,16 @@
                 ></app-cartao-sus>
             </p-accordionTab>
             <p-accordionTab header="Observação">
-                <app-observacao
-                    [observacao]="formularioDeCadastro.controls.observacao"
-                ></app-observacao>
+                <div class="ui-g ui-fluid">
+                    <textarea
+                        formControlName="observacao"
+                        [rows]="3"
+                        pInputTextarea
+                        autoResize="autoResize"
+                    ></textarea>
+                </div>
             </p-accordionTab>
         </p-accordion>
         <button pButton type="submit" label="Cadastrar"></button>
-    </div>
+    </form>
 </div>
