--- a/frontend/src/app/pacientes/components/pesquisa-cid/pesquisa-cid.component.html
+++ b/frontend/src/app/pacientes/components/pesquisa-cid/pesquisa-cid.component.html
@@ -1,12 +1,16 @@
-<span class="ui-float-label">
-    <p-autoComplete
-        [suggestions]="service.getCIDS()"
-        [field]="field"
-        (completeMethod)="service.buscarPorDescricao($event.query)"
-        formControlName="formControl"
-        [dropdown]="true"
-        [forceSelection]="true"
-        [required]="required"
-    ></p-autoComplete>
-    <label>{{ label }}</label>
-</span>
+<div class="ui-g">
+    <form [formGroup]="group">
+        <span class="ui-float-label">
+            <p-autoComplete
+                formControlName="valor"
+                field="descricao"
+                [required]="required"
+                [suggestions]="service.getCIDS()"
+                [dropdown]="true"
+                [forceSelection]="true"
+                (completeMethod)="service.buscarPorDescricao($event.query)"
+            ></p-autoComplete>
+            <label>{{ label }}</label>
+        </span>
+    </form>
+</div>
