Adiciona terceira versão da pesquisa de CID

--- a/frontend/src/app/pacientes/components/pesquisa-cid/pesquisa-cid.component.html
+++ b/frontend/src/app/pacientes/components/pesquisa-cid/pesquisa-cid.component.html
@@ -12,5 +12,6 @@
             ></p-autoComplete>
             <label>{{ label }}</label>
         </span>
+        <app-arvore-cid></app-arvore-cid>
     </form>
 </div>
