Adiciona quarta versão da pesquisa-cid

--- a/frontend/src/app/pacientes/components/arvore-cid/arvore-cid.component.html
+++ b/frontend/src/app/pacientes/components/arvore-cid/arvore-cid.component.html
@@ -5,5 +5,10 @@
     [(visible)]="mostrarArvore"
     (onShow)="aoAbrir()"
 >
-    <p-tree [value]="nodes" selectionMode="single"></p-tree>
+    <p-tree
+        [value]="nodes"
+        selectionMode="single"
+        (onNodeSelect)="selecionar($event)"
+        [(selection)]="selectedFile"
+    ></p-tree>
 </p-dialog>
