--- a/frontend/src/app/pacientes/components/pesquisa-cid/pesquisa-cid.component.html
+++ b/frontend/src/app/pacientes/components/pesquisa-cid/pesquisa-cid.component.html
@@ -12,6 +12,6 @@
             ></p-autoComplete>
             <label>{{ label }}</label>
         </span>
-        <app-arvore-cid></app-arvore-cid>
+        <app-arvore-cid (aoSelecionar)="selecionarNaArvore($event)"></app-arvore-cid>
     </form>
 </div>
