Ajustes para uso do Lazy Loading

--- a/frontend/src/app/pacientes/components/arvore-cid/arvore-cid.component.html
+++ b/frontend/src/app/pacientes/components/arvore-cid/arvore-cid.component.html
@@ -10,5 +10,6 @@
         selectionMode="single"
         (onNodeSelect)="selecionar($event)"
         [(selection)]="selectedFile"
+        (onNodeExpand)="carregar($event)"
     ></p-tree>
 </p-dialog>
