--- a/frontend/src/app/pacientes/components/triagem/triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/triagem.component.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="ui-g-12 ui-md-3"></div>
                 <basis-datatable type="memory" [value]="null">
-                    <p-column header="Nome do Paciente" field="nomeDoPaciente"></p-column>
+                    <p-column header="Nome do Paciente" field="paciente"></p-column>
                     <p-column header="Nome Social" field="nomeSocial"></p-column>
                     <p-column header="Nome da Mãe" field="nomeDaMae"></p-column>
                     <p-column header="Data do Atendimento" field="dataDoAtendimento"> </p-column>
