Ligação do back com front e criação de método Salvar no Banco

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.html
@@ -6,12 +6,8 @@
         <div class="ui-g-12">
             <div class="ui-g-12 ui-sm-12">
                 <span class="ui-float-label">
-                    <input
-                        type="text"
-                        pTooltip="Informe nome do paciente"
-                        pInputText
-                        formControlName="paciente"
-                    />
+                    <input type="text" pTooltip="Informe nome do paciente" pInputText />
+                    <!-- formControlName="paciente" -->
                     <label>Nome do Paciente</label>
                 </span>
             </div>
