Cria componente dropdown com autocomplete para Caráter da Internação

--- a/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
+++ b/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
@@ -62,10 +62,13 @@
             <!-- Caráter da Internação -->
             <div class="ui-g-12">
                 <div class="ui-g-5">
-                    <app-carater-da-internacao>
-                        [parentFormGroup]="formGroup" [required]="true" name="caraterDaInternacao"
-                        label="Caráter da Internação" ></app-carater-da-internacao
+                    <app-carater-da-internacao
+                        [parentFormGroup]="formGroup"
+                        [required]="true"
+                        name="caraterDaInternacao"
+                        label="Caráter da Internação"
                     >
+                    </app-carater-da-internacao>
                 </div>
             </div>
             <!-- Origem da Internação -->
