--- a/frontend/src/app/internacao/components/local-de-atendimento/local-de-atendimento.component.html
+++ b/frontend/src/app/internacao/components/local-de-atendimento/local-de-atendimento.component.html
@@ -1,1 +1,16 @@
-<p>local-de-atendimento works!</p>
+<form [formGroup]="parentFormGroup">
+    <span class="ui-float-label">
+        <p-autoComplete
+            field="nome"
+            [formControlName]="name"
+            (completeMethod)="aoDigitar($event)"
+            (onBlur)="aoDesfocar()"
+            [required]="required"
+            [suggestions]="locaisDeAtendimento"
+            [forceSelection]="true"
+            [dropdown]="true"
+        >
+        </p-autoComplete>
+        <label>{{ label }}</label>
+    </span>
+</form>
