Correções nos campos de Especialidade e Equipe

--- a/frontend/src/app/internacao/components/especialidade/especialidade.component.html
+++ b/frontend/src/app/internacao/components/especialidade/especialidade.component.html
@@ -9,6 +9,7 @@
             [suggestions]="especialidades"
             [forceSelection]="true"
             [dropdown]="true"
+            (onSelect)="aoSelecionar()"
         >
         </p-autoComplete>
         <label>{{ label }}</label>
