--- a/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
+++ b/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
@@ -200,6 +200,7 @@
                 icon="pi pi-check"
                 label="Internar Paciente"
                 (onClick)="internarPaciente()"
+                [disabled]="formGroup.invalid"
             ></p-button>
         </form>
     </p-fieldset>
