Corrige bug ao usar LazyLoading na árvore de cid's

--- a/frontend/src/app/internacao/components/cid/arvore-cid/arvore.component.html
+++ b/frontend/src/app/internacao/components/cid/arvore-cid/arvore.component.html
@@ -6,9 +6,10 @@
     (onShow)="aoAbrir()"
 >
     <p-tree
-        [(selection)]="selectedFile"
+        [(selection)]="cidSelecionado"
         (onNodeSelect)="aoSelecionarCid()"
-        [value]="null"
+        [value]="pais"
         selectionMode="single"
+        (onNodeExpand)="carregarFilhos($event)"
     ></p-tree>
 </p-dialog>
