--- a/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
@@ -33,6 +33,6 @@
                 </div>
             </p-accordionTab>
         </p-accordion>
-        <button pButton type="submit" label="Cadastrar"></button>
+        <button pButton type="submit" [disabled]="!valid()" label="Cadastrar"></button>
     </form>
 </div>
